Fix Single Color overflow

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 }
 h1 {
   font-family: "Satisfy", cursive;
-  font-size: 5rem;
+  font-size: clamp(3rem, 5vw, 5rem);
   font-weight: 300;
 }
 h3 {
@@ -92,10 +92,10 @@ main {
 .grid-container::after {
   content: "Current Single Square Dimension: " attr(data-dimension) " x "
     attr(data-dimension);
-  font-size: 1.25em;
+  font-size: 1.25rem;
   font-weight: bold;
   position: absolute;
-  bottom: -2.5em;
+  bottom: -3.5em;
   right: -1%;
   z-index: -1;
   border-radius: 5px;
@@ -125,6 +125,12 @@ main {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  gap: 1rem;
+}
+.color-wheel {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   gap: 1rem;
 }
 [data-util="clear"]:hover {
